--- a/FindAirline/Base.lproj/Main.storyboard
+++ b/FindAirline/Base.lproj/Main.storyboard
@@ -3,21 +3,40 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Settings-->
+        <scene sceneID="m5L-5Q-uS3">
+            <objects>
+                <navigationController id="SbN-a5-rRv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" id="odn-0O-6Ok"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sJr-wx-uxY">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="94S-Pe-iyC" kind="relationship" relationship="rootViewController" id="5va-T8-vIO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v9D-MK-ZDS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-512" y="100"/>
+        </scene>
+        <!--Settings-->
         <scene sceneID="4ph-Fd-6rJ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bXL-mI-Vy9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="SettingsViewController" id="94S-Pe-iyC" customClass="SettingsViewController" customModule="FindAirline" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1JQ-r4-for">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Switch theme" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJS-td-bkx">
-                                <rect key="frame" x="24" y="79" width="104" height="30"/>
+                                <rect key="frame" x="24" y="123" width="104" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="kyB-TF-bi8"/>
                                 </constraints>
@@ -26,26 +45,84 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="swX-aK-CCo">
-                                <rect key="frame" x="320" y="79" width="51" height="31"/>
+                                <rect key="frame" x="320" y="123" width="51" height="31"/>
                             </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHm-Dn-Ocy">
+                                <rect key="frame" x="16" y="216" width="361" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3Oh-Cz-CwL">
+                                <rect key="frame" x="16" y="253" width="361" height="500"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="9N4-3o-xSc"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoriteAirlineCell" rowHeight="194" id="O43-7S-Jzj" customClass="FavoriteAirlineCell" customModule="FindAirline" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="361" height="194"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O43-7S-Jzj" id="o4S-yh-wPm" customClass="FavoriteAirlineCell" customModule="FindAirline" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="194"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79f-NL-K9s">
+                                                    <rect key="frame" x="36" y="77" width="41.333333333333343" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="tFy-2l-kEO"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GR3-T9-8LS">
+                                                    <rect key="frame" x="93.333333333333343" y="22" width="263.66666666666663" height="150"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="150" id="hPO-Fz-HA6"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GR3-T9-8LS" firstAttribute="leading" secondItem="79f-NL-K9s" secondAttribute="trailing" constant="16" id="M62-gN-N01"/>
+                                                <constraint firstItem="GR3-T9-8LS" firstAttribute="centerY" secondItem="o4S-yh-wPm" secondAttribute="centerY" id="Nnn-r0-aMV"/>
+                                                <constraint firstItem="79f-NL-K9s" firstAttribute="centerY" secondItem="o4S-yh-wPm" secondAttribute="centerY" id="YJ4-mV-Blm"/>
+                                                <constraint firstAttribute="trailing" secondItem="GR3-T9-8LS" secondAttribute="trailing" constant="4" id="reg-g7-cLE"/>
+                                                <constraint firstItem="79f-NL-K9s" firstAttribute="leading" secondItem="o4S-yh-wPm" secondAttribute="leadingMargin" constant="16" id="yQ8-mC-2ou"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="airlineImageView" destination="GR3-T9-8LS" id="Bqh-3r-fn7"/>
+                                            <outlet property="airlineNameLabel" destination="79f-NL-K9s" id="cvF-Dz-lNw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="p8X-DW-IaI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="hHm-Dn-Ocy" firstAttribute="leading" secondItem="p8X-DW-IaI" secondAttribute="leading" constant="16" id="2be-iN-WYT"/>
                             <constraint firstItem="p8X-DW-IaI" firstAttribute="trailing" secondItem="swX-aK-CCo" secondAttribute="trailing" constant="24" id="53l-NI-7yN"/>
                             <constraint firstItem="swX-aK-CCo" firstAttribute="top" secondItem="p8X-DW-IaI" secondAttribute="top" constant="20" id="RFo-v6-FpD"/>
                             <constraint firstItem="gJS-td-bkx" firstAttribute="top" secondItem="p8X-DW-IaI" secondAttribute="top" constant="20" id="TjL-uA-avM"/>
+                            <constraint firstItem="3Oh-Cz-CwL" firstAttribute="leading" secondItem="p8X-DW-IaI" secondAttribute="leading" constant="16" id="Ugj-t1-OTd"/>
+                            <constraint firstItem="p8X-DW-IaI" firstAttribute="trailing" secondItem="3Oh-Cz-CwL" secondAttribute="trailing" constant="16" id="XJD-HY-ubA"/>
+                            <constraint firstItem="p8X-DW-IaI" firstAttribute="trailing" secondItem="hHm-Dn-Ocy" secondAttribute="trailing" constant="16" id="jOK-Vj-nmo"/>
+                            <constraint firstItem="p8X-DW-IaI" firstAttribute="bottom" secondItem="3Oh-Cz-CwL" secondAttribute="bottom" constant="16" id="loj-iA-o35"/>
+                            <constraint firstItem="3Oh-Cz-CwL" firstAttribute="top" secondItem="hHm-Dn-Ocy" secondAttribute="bottom" constant="16" id="oe9-g0-vL0"/>
                             <constraint firstItem="gJS-td-bkx" firstAttribute="leading" secondItem="p8X-DW-IaI" secondAttribute="leading" constant="24" id="uRZ-xQ-6U3"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" id="Gan-cg-NtF"/>
+                    <navigationItem key="navigationItem" id="lLg-LS-dXE"/>
                     <connections>
+                        <outlet property="favoritesTableView" destination="3Oh-Cz-CwL" id="9Ds-i8-hgC"/>
                         <outlet property="themeSwitch" destination="swX-aK-CCo" id="qWV-kQ-ZjH"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bXL-mI-Vy9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="415" y="112"/>
+            <point key="canvasLocation" x="414.50381679389312" y="100"/>
         </scene>
         <!--Airlines-->
         <scene sceneID="wbT-0J-ZY0">
@@ -146,7 +223,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ote-Yq-9Lc" kind="relationship" relationship="viewControllers" id="Z5n-ry-T5t"/>
-                        <segue destination="94S-Pe-iyC" kind="relationship" relationship="viewControllers" id="bJj-KY-ek7"/>
+                        <segue destination="SbN-a5-rRv" kind="relationship" relationship="viewControllers" id="q0B-hX-qVK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kfm-Oa-0uN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -208,6 +285,26 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uKS-lC-hKF">
+                                <rect key="frame" x="337" y="20" width="40" height="40"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
+                                </accessibility>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="Bf3-Gd-OMf"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="gT2-lv-sPI"/>
+                                    <constraint firstAttribute="height" constant="40" id="uUG-pn-Zdj"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="default"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="favoriteButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bfA-fN-LFj"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -221,6 +318,8 @@
                             <constraint firstItem="udf-FT-DGC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="GqW-u3-IDN"/>
                             <constraint firstItem="PBY-Nu-Ro8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Iyf-9g-sZm"/>
                             <constraint firstItem="PBY-Nu-Ro8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Lcp-ph-R08"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uKS-lC-hKF" secondAttribute="trailing" constant="16" id="PnR-Nb-1RI"/>
+                            <constraint firstItem="uKS-lC-hKF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Vbc-nu-z7w"/>
                             <constraint firstItem="PBY-Nu-Ro8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Won-tp-5yc"/>
                             <constraint firstAttribute="trailing" secondItem="PBY-Nu-Ro8" secondAttribute="trailing" id="Y5N-ZO-i0g"/>
                             <constraint firstItem="iNI-IH-6aE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="g05-yM-BKA"/>
@@ -237,6 +336,7 @@
                         <outlet property="airlineImageView" destination="sER-hL-X3X" id="jFn-9N-N6U"/>
                         <outlet property="airlineName" destination="Udr-2e-ANQ" id="NJJ-Dk-Zxd"/>
                         <outlet property="airlineThemeImageView" destination="PBY-Nu-Ro8" id="vce-3f-sti"/>
+                        <outlet property="favoriteButton" destination="uKS-lC-hKF" id="RWD-j0-j4O"/>
                         <outlet property="fleetDescriptionLabel" destination="iNI-IH-6aE" id="EKJ-1V-q4H"/>
                         <outlet property="iataLabel" destination="JMD-b7-Pcm" id="QLy-sH-DcX"/>
                         <outlet property="icaoLabel" destination="2R5-AR-fqt" id="6Rl-10-6aa"/>
@@ -267,10 +367,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="horizont" width="1280" height="853"/>
         <image name="vertical" width="725" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
